Added the first task

--- a/Index.html
+++ b/Index.html
@@ -18,7 +18,7 @@
 
     <div class="menu-container">
         <ol class="menu">
-            <a class="menu__href" href="">
+            <a class="menu__href" href="task1/index.html">
                 <li class="menu__item">Задание 1</li>
             </a>
             <a class="menu__href" href="">
