Added the second task

--- a/Index.html
+++ b/Index.html
@@ -21,7 +21,7 @@
             <a class="menu__href" href="task1/index.html">
                 <li class="menu__item">Задание 1</li>
             </a>
-            <a class="menu__href" href="">
+            <a class="menu__href" href="task2/index.html">
                 <li class="menu__item">Задание 2</li>
             </a>
             <a class="menu__href" href="">
