Added the third task

--- a/Index.html
+++ b/Index.html
@@ -24,7 +24,7 @@
             <a class="menu__href" href="task2/index.html">
                 <li class="menu__item">Задание 2</li>
             </a>
-            <a class="menu__href" href="">
+            <a class="menu__href" href="task3/index.html">
                 <li class="menu__item">Задание 3</li>
             </a>
             <a class="menu__href" href="">
