Added the fourth task

--- a/Index.html
+++ b/Index.html
@@ -27,7 +27,7 @@
             <a class="menu__href" href="task3/index.html">
                 <li class="menu__item">Задание 3</li>
             </a>
-            <a class="menu__href" href="">
+            <a class="menu__href" href="task4/index.html">
                 <li class="menu__item">Задание 4</li>
             </a>
             <a class="menu__href" href="">
