--- a/Index.html
+++ b/Index.html
@@ -30,7 +30,7 @@
             <a class="menu__href" href="task4/index.html">
                 <li class="menu__item">Задание 4</li>
             </a>
-            <a class="menu__href" href="">
+            <a class="menu__href" href="task5/index.html">
                 <li class="menu__item">Задание 5</li>
             </a>
             <a class="menu__href" href="">
