Added the sixth task

--- a/Index.html
+++ b/Index.html
@@ -33,7 +33,7 @@
             <a class="menu__href" href="task5/index.html">
                 <li class="menu__item">Задание 5</li>
             </a>
-            <a class="menu__href" href="">
+            <a class="menu__href" href="task6/index.html">
                 <li class="menu__item">Задание 6</li>
             </a>
         </ol>
